<resources>
    <string name="app_name">BballCoachCompanion</string>
    <string name="prendrePhoto">Take Photo</string>
    <string name="localiserMatch">Locate match</string>
    <string name="voirMatch">See matchs</string>
    <string name="AjouterMatch">Add match</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="points_scored">scored points</string>
    <string name="best_scorer">best stricker</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="score">Score</string>
    <string name="langue">change for french</string>
    <string name="NoMatch">there is no recent match</string>
    <string name="Match">Game : </string>
    <string name="scoreMatch">Score : </string>
    <string name="top_scorer">Top Scorer : </string>
    <string name="CourseValidation">Course has been added</string>
</resources>