<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/tv_Match"
            android:text="@string/Match"
            android:layout_weight="1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Match"
            android:layout_weight="1"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_score"
        android:text="@string/scoreMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:layout_weight="1"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_best_scoreur"
        android:text="@string/top_scorer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_score"
        android:layout_weight="1"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/tv_best_scoreur"
        android:background="@color/btnColor"
        android:layout_margin="8dp"/>
</RelativeLayout>